--- a/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/00_smartlab.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/00_smartlab.mdx
@@ -8,16 +8,16 @@ id: "smartlab"
 import IntroButton from '@site/src/components/IntroButton.js';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-# Smart Laboratory (Smart Lab)
+# Smartes Labor (Smart Lab)
 
 ![smartlab_flow](/img/smartlab/smartlab_flow2.png)
 
-The term smart laboratory does not refer to a laboratory where tablets can be found in every corner. The smart lab represents a holistic approach to [data management](/docs/data_guide) in chemistry with seamless data flows. What does this mean? It means that all steps within a researcher's [workflow](/docs/domain_guide) across the [research data lifecycle](/docs/data_life_cycle) are interconnected in a digital way. The key difference to a [Laboratory Management System (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) is that the Smart Lab's main focus is the realisation of the [FAIR data principles](/docs/fair). For example, a researcher plans and [documents](/docs/data_documentation) their experiment in an [electronic lab notebook (ELN)](docs/eln). Any experimental data from devices such as spectrometers are then directly ingested by the ELN via [Application Programming Interfaces (APIs)](https://en.wikipedia.org/wiki/API). 
+Der Begriff "smartes Labor" bezieht sich nicht auf ein Labor, in dem Tablets in jeder Ecke zu finden sind. Das intelligente Labor steht für einen ganzheitlichen Ansatz für [Datenmanagement](/docs/data_guide) in der Chemie mit nahtlosen Datenflüssen. Was bedeutet das? Es bedeutet, dass alle Schritte innerhalb des [Arbeitsablaufs](/docs/domain_guide) eines Forschers über den [Lebenszyklus der Forschungsdaten](/docs/data_life_cycle) hinweg auf digitale Weise miteinander verbunden sind. Der wesentliche Unterschied zu einem [Labormanagementsystem (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) besteht darin, dass der Schwerpunkt des Smart Labs auf der Umsetzung der [FAIRen Datenprinzipien](/docs/fair) liegt. Zum Beispiel plant und [dokumentiert](/docs/data_documentation) ein Forscher sein Experiment in einem [Elektronischen Laborjournal (ELN)](docs/eln). Alle experimentellen Daten von Geräten wie z. B. Spektrometern werden dann über [Application Programming Interfaces (APIs)](https://en.wikipedia.org/wiki/API) direkt in das ELN übernommen. 
 
-The ELN then ideally assigns all the necessary [metadata](/docs/metadata) automatically and appropriately for a corresponding workflow and converts proprietary [data formats](/docs/format_standards) to open data formats. The ELN structures the (meta)data and experimental descriptions in a meaningful and sustainable way which is both human- and machine-readable (e.g., via the use of [machine-readable chemical structures](/docs/machine-readable_chemical_structures). When the researcher chooses to [publish](/docs/data_publication) or [archive](/docs/data_storage) their data, it is then ingested seamlessly by a data [repository](/docs/repositories) or archive without much further work as the ELN has already appropriately prepared the dataset to meet a repository’s or archive’s [requirements](/docs//choose_repository). 
+Das ELN ordnet dann idealerweise alle notwendigen [Metadaten](/docs/metadata) automatisch und passend zu einem entsprechenden Workflow zu und konvertiert proprietäre [Datenformate](/docs/format_standards) in offene Datenformate. Das ELN strukturiert die (Meta-)Daten und experimentellen Beschreibungen in einer sinnvollen und nachhaltigen Art und Weise, die sowohl von Menschen als auch von Maschinen lesbar ist (z. B. durch die Verwendung von [maschinenlesbaren chemischen Strukturen](/docs/machine-readable_chemical_structures). Wenn sich der Forscher für die [Veröffentlichung](/docs/data_publication) oder die [Archivierung](/docs/data_storage) seiner Daten entscheidet, werden diese nahtlos von einem [Repositorium](/docs/repositories) oder einem Archiv aufgenommen, ohne dass viel weitere Arbeit anfällt, da das ELN den Datensatz bereits entsprechend aufbereitet hat, damit er den [Anforderungen](/docs//choose_repository) eines Repositoriums oder Archivs entspricht. 
 
-In this section, key components of the smart lab will be introduced to you.
+In diesem Abschnitt werden Ihnen die wichtigsten Komponenten des Smart Labs vorgestellt.
 
-## Get started:
+## Los geht's:
 
 <IntroButton url={"/docs/eln"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Electronic Lab Notebooks"} />
