--- a/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/10_eln.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/10_eln.mdx
@@ -6,63 +6,63 @@ id: "eln"
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-# Electronic Lab Notebooks (ELNs)
+# Elektronische Laborjournale (ELNs)
 
-## Introduction
+## Einleitung
 
-Information technology continuously develops at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last century. 
+Die Informationstechnologie entwickelt sich ständig in rasantem Tempo. So sind beispielsweise die Smartphones, die wir alle täglich in der Tasche tragen, viel schneller als ein Supercomputer aus den 80er Jahren, der kaum in ein durchschnittliches Schlafzimmer passte. Leider hat diese rasante Entwicklung der Informationstechnologie unsere chemischen Labors noch nicht vollständig erreicht. Das Papierlaborheft ist noch genauso beliebt und weit verbreitet wie vor 100 Jahren, und die Art und Weise, wie chemische Forschungsdaten dokumentiert werden - buchstäblich mit Stift und Papier - hat sich im letzten Jahrhundert nur wenig weiterentwickelt. 
 
-Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean tablets & touch screens in every corner of your laboratory. The term Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](/docs/fair). ELNs help to assign rich [metadata](/docs/metadata) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](/docs/data_storage).
+Die Übertragung des Fortschritts der Informationstechnologie in das Labor (Smartlab) bedeutet nicht unbedingt Tablets und Touchscreens in jeder Ecke Ihres Labors. Der Begriff Smartlab bezieht sich vielmehr auf die Vernetzung des gesamten Arbeitsablaufs und den Umgang mit Forschungsdaten nach den [FAIR-Prinzipien](/docs/fair). ELNs helfen dabei, Experimente mit umfangreichen [Metadaten](/docs/metadata) zu versehen und die gesammelten Daten nachvollziehbar und wiederverwendbar zu machen. Mit der Möglichkeit, Daten von Messgeräten direkt in das ELN zu übertragen, ist das ELN der zentrale Speicher mit allen Daten an einem Ort. Vom ELN aus können die Daten einfach in Repositorien veröffentlicht und in geeignete Langzeitarchive (/docs/data_storage) übertragen werden.
 
-One of the most important things, that distinguishes an ELN from a white blank paper is the possibility to document [metadata](/docs/metadata) in a structured and ideally in a human as well as machine-readable way. See the following overview for more information on the differences between blank sheets, ELNs and laboratory information management systems (LIMS).
+Eines der wichtigsten Dinge, die ein ELN von einem weißen Blatt Papier unterscheidet, ist die Möglichkeit, [Metadaten](/docs/metadata) strukturiert und idealerweise sowohl für Menschen als auch für Maschinen lesbar zu dokumentieren. In der folgenden Übersicht finden Sie weitere Informationen zu den Unterschieden zwischen Blankopapier, ELN und Laborinformationsmanagementsystemen (LIMS).
 
 <div className='container'>
     <div className='row'>
         <div className="col" style={{ width: 300, padding: 10, }}>
             <div className="button button--lg button--primary" style={{ width: 300,  height: 480, padding: 20, }}>
-            <h3>Simple system</h3>
+            <h3>Einfaches System</h3>
             <ul>
-                <li>Enter text</li>
-                <li>Add notes</li>
-                <li>Add files as attachments</li>
-                <li>Sharing</li>
-                <li>Searching</li>
+                <li>Text eingeben</li>
+                <li>Notizen hinzufügen</li>
+                <li>Dateien als Anhang hinzufügen</li>
+                <li>Teilen</li>
+                <li>Suchen</li>
             </ul>
-            <em>e.g., Evernote GoogleDrive, Dropbox, MS Sharepoint</em>
+            <em>z.B., Evernote GoogleDrive, Dropbox, MS Sharepoint</em>
             </div>
         </div>
         <div className="col" style={{ width: 300, padding: 10, }}>
             <div className="button button--lg button--secondary" style={{ width: 300,  height: 480, padding: 20, }}>
-            <h3>Electronic Lab Notebook (ELN)</h3>
+            <h3>Electronisches Laborjournal (ELN)</h3>
             <ul>
-                <li>Structured metadata in human and machine-readable formats</li>
-                <li>Discipline-specific functions / editors</li>
-                <li>Rights management</li>
-                <li>Audit trail</li>
+                <li>Strukturierte Metadaten in menschen- und maschinenlesbaren Formaten</li>
+                <li>Fachspezifische Funktionen / Redakteure</li>
+                <li>Rechteverwaltung</li>
+                <li>Prüfprotokoll</li>
                 <li>API</li>
             </ul>
-            <em>e.g., Labfolder, RSpace, eLabFTW, Labguru</em>
+            <em>z.B., Labfolder, RSpace, eLabFTW, Labguru</em>
             </div>
         </div>
         <div className="col" style={{ width: 300, padding: 10, }}>
             <div className="button button--lg button--primary" style={{ width: 300,  height: 480, padding: 20, }}>
-            <h3>Laboratory Information Management System</h3>
+            <h3>Labor-Informations-Management-System</h3>
             <ul>
-                <li>Sample management</li>
-                <li>Instrument integration</li>
-                <li>Electronic signatures</li>
-                <li>Reporting or statistics modules</li>
+                <li>Verwaltung von Proben</li>
+                <li>Integration der Geräte</li>
+                <li>Elektronische Unterschriften</li>
+                <li>Berichts- oder Statistikmoduls</li>
             </ul>
-            <em>e.g., Benchling, Starlims, Limesophy</em>
+            <em>z.B., Benchling, Starlims, Limesophy</em>
             </div>
         </div>
     </div>
 </div>
 
 
-## Advantages of an ELN
+## Vorteile eines ELN
 
-ELNs help to link experimental descriptions directly to the collected data so that all information can be found in one place. Furthermore, data loss is avoided by secure data storage and backups. Storing all the data in one central place helps also with knowledge management because the data is easily findable and accessible, even for new members in a research project. The biggest advantage of an ELN is that [metadata](/docs/metadata) is stored in a structured and [standardised](/docs/format_standards) way. This also helps with publishing research results and transferring research data to a repository.
+ELNs helfen dabei, Versuchsbeschreibungen direkt mit den gesammelten Daten zu verknüpfen, so dass alle Informationen an einer Stelle zu finden sind. Außerdem werden Datenverluste durch sichere Datenspeicherung und Backups vermieden. Die Speicherung aller Daten an einem zentralen Ort hilft auch beim Wissensmanagement, da die Daten leicht auffindbar und zugänglich sind, auch für neue Mitglieder eines Forschungsprojekts. Der größte Vorteil eines ELN ist, dass [Metadaten](/docs/metadata) strukturiert und [standardisiert](/docs/format_standards) gespeichert werden. Dies hilft auch bei der Veröffentlichung von Forschungsergebnissen und der Übertragung von Forschungsdaten in ein Repositorium.
 
 
 <div className='container'>
@@ -112,79 +112,79 @@ ELNs help to link experimental descriptions directly to the collected data so th
     </div>
 </div>
 
-## The right ELN
+## Das richtige ELN
 
-To date, there is not one ELN, that fits the requirements for all chemical disciplines. Furthermore, only a few ELNs meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure. The organisation of work with ELNs that support chemistry-specific functions can offer several benefits, such as the availability of [chemical structure identifiers](/docs/machine-readable_chemical_structures) and [standardised formats](/docs/format_standards) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
+Bis heute gibt es nicht das eine ELN, das die Anforderungen für alle chemischen Disziplinen erfüllt. Darüber hinaus erfüllen nur wenige ELNs die grundlegenden Anforderungen für die chemischen Wissenschaften. Dies liegt wahrscheinlich an den Herausforderungen, die sich aus dem Zeichnen und Verarbeiten chemischer Strukturen ergeben, ein entscheidender und zentraler Schritt, um Forschungsdaten mit der entsprechenden chemischen Reaktion oder Struktur korrelieren zu können. Die Organisation der Arbeit mit ELNs, die chemiespezifische Funktionen unterstützen, kann mehrere Vorteile bieten, wie z.B. die Verfügbarkeit von [chemischen Strukturbezeichnern](/docs/machine-readable_chemical_structures) und [standardisierten Formaten](/docs/format_standards) sowie die Integration vielfältiger Werkzeuge und Workflows, die die wissenschaftliche Arbeit erleichtern. Die direkte Integration von Werkzeugen ermöglicht eine unmittelbare Unterstützung des Wissenschaftlers ohne die Notwendigkeit, nach zusätzlichen Diensten und Software zu suchen, und bringt so neue Entwicklungen und Informationen direkt in das Bewusstsein der Wissenschaftler. Einige Open-Source-Beispiele für Systeme in der Chemie, die die notwendige Unterstützung für chemische Strukturen bieten, sind [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/) und [Chemotion ELN](https://eln.chemotion.net/home).
 
-Therefore, choosing the right ELN is crucial for a successful implementation of an ELN in a laboratory. Three steps should be taken to establish an ELN: 1) Needs assessment, 2) Testing and 3) Introducing the chosen ELN.
+Daher ist die Wahl des richtigen ELN entscheidend für eine erfolgreiche Implementierung eines ELN in einem Labor. Zur Einrichtung eines ELN sollten drei Schritte unternommen werden: 1) Bedarfsanalyse, 2) Testen und 3) Einführung des gewählten ELN.
 
-:::caution Needs assessment
-- Analysing current situation (budget, IT resources, software environment)
-- Definition of important features
-- ELN concept (generic, discipline-specific)
-- Drawing on experiences of other research Institutions
+:::caution Bedarfsanalyse
+- Analyse der aktuellen Situation (Budget, IT-Ressourcen, Softwareumgebung)
+- Definition der wichtigsten Merkmale
+- ELN-Konzept (generisch, disziplinspezifisch)
+- Heranziehen von Erfahrungen anderer Forschungsinstitutionen
 :::
 
-:::info Testing the selected products
-- Demo versions or free trial access for individual users
-- Testing no more than 2-3 ELNs
-- In-depth testing using real-life use cases from the lab
+:::info Testen der ausgewählten Produkte
+- Demoversionen oder kostenloser Testzugang für einzelne Nutzer
+- Testen von nicht mehr als 2-3 ELNs
+- Eingehende Tests mit realen Anwendungsfällen aus dem Labor
 :::
 
-:::tip Introducing the chosen ELN
-- Run training courses, training material
-- Designate contact persons from the test team
-- Continuous mentoring
+:::tip Einführung des ausgewählten ELN
+- Durchführung von Schulungen, Schulungsmaterial
+- Benennung von Ansprechpartnern aus dem Testteam
+- Kontinuierliches Mentoring
 :::
 
 
-### Criteria for selecting an ELN
+### Kriterien für die Auswahl eines ELN
 
-|Category|Explanation|
+|Kategorie|Erläuterung|
 |:------------|:------------|
-|License model|Commercial ELNs mostly use proprietary file formats, the source code is closed source and a license fee is charged. Open source ELNs are free of charge, use open standard formats, source code is openly accessible and further developed by an active developer community. Implementation and maintenance require the appropriate human resources.|
-|Providing model|Software can be provided either in a cloud (SaaS - Software as a Service) or server-based for local installation at the customer's site (on-premises).|
-|File storage|Data storage in the cloud of the ELN provider (or their service provider, e.g. in the EU) or the possibility of storage on own local servers/in the own cloud are offered.|
-|Concept|Concept refers to the subject-specific orientation. Generic tools can be used in all subjects, but usually do not provide specific features, such as structure editors for chemistry.|
-|Standard interface|Standard interfaces enable data exchange with external programs, e.g. ChemDraw, Marvin JS, ChemDoodle, MS Office, Libre Office, ImageJ, Slack|
-|Pragramming interfaces|An API is needed for integration into an existing IT environment, e.g. own storage solutions.|
-|File import/export|Export/import of both human- and machine-readable formats should be possible (e.g. pdf, zip, csv, json, xml), ideally also larger units, such as the ELN.|
-|Metadata|Providing metadata is a crucial factor in ensuring findability and understanding of data. Metadata should be recorded in a structured, machine- and human-readable format.|
-|Collaboration|Collaboration simplifies the exchange of data and results. It should be possible to define roles, e.g. who has access and to what extend (role management).|
-|Sharing/Publication|ELNs allow direct exchange of data with portals for publishing/sharing research data.|
-|Search|The search function allows data to be retrieved and filtered.|
-|Templates|Templates are used for time saving and standardization. One advantage is the option to create templates according to one’s own needs.|
-|Workflows|Documenting processes significantly increases efficiency, traceability and contributes to transparency and transporting of know-how.|
-|Security of evidence|Evidence security means the traceable documentation in compliance with legal regulations, e.g. providing the entries with a time stamp, electronic signature, versioning.|
-|Rule compliance|The tool must enable compliance with regulatory requirements, e.g. GLP, GCP.|
-Table Attribution: ZB MED PUBLISSO ELN-Filter, 2921-06 english.
+|Lizenzmodell|Kommerzielle ELNs verwenden meist proprietäre Dateiformate, der Quellcode ist Closed Source und es wird eine Lizenzgebühr erhoben. Open-Source-ELNs sind kostenlos, verwenden offene Standardformate, der Quellcode ist offen zugänglich und wird von einer aktiven Entwicklergemeinde weiterentwickelt. Implementierung und Wartung erfordern entsprechende personelle Ressourcen.
+|Bereitstellungsmodell|Die Software kann entweder in einer Cloud (SaaS - Software as a Service) oder serverbasiert zur lokalen Installation beim Kunden (on-premises) bereitgestellt werden.
+|Es wird die Speicherung der Daten in der Cloud des ELN-Anbieters (oder dessen Dienstleister, z.B. in der EU) oder die Möglichkeit der Speicherung auf eigenen lokalen Servern/der eigenen Cloud angeboten.
+|Das Konzept bezieht sich auf die fachspezifische Ausrichtung. Generische Werkzeuge können in allen Fächern eingesetzt werden, bieten aber in der Regel keine spezifischen Funktionen, wie z.B. Struktur-Editoren für die Chemie.
+|Standardschnittstelle|Standardschnittstellen ermöglichen den Datenaustausch mit externen Programmen, z.B. ChemDraw, Marvin JS, ChemDoodle, MS Office, Libre Office, ImageJ, Slack|
+|Für die Integration in eine bestehende IT-Umgebung, z.B. eigene Speicherlösungen, wird eine API benötigt.
+|Datei-Import/Export|Export/Import von sowohl menschen- als auch maschinenlesbaren Formaten sollte möglich sein (z.B. pdf, zip, csv, json, xml), idealerweise auch größere Einheiten, wie das ELN.|
+|Die Bereitstellung von Metadaten ist ein entscheidender Faktor, um die Auffindbarkeit und das Verständnis der Daten zu gewährleisten. Metadaten sollten in einem strukturierten, maschinen- und menschenlesbaren Format erfasst werden.
+|Kollaboration|Kollaboration vereinfacht den Austausch von Daten und Ergebnissen. Es sollte möglich sein, Rollen zu definieren, z.B. wer in welchem Umfang Zugriff hat (Rollenmanagement).
+|Sharing/Publikation|ELNs ermöglichen den direkten Datenaustausch mit Portalen zum Publizieren/Teilen von Forschungsdaten.
+|Suche|Die Suchfunktion ermöglicht das Auffinden und Filtern von Daten.
+|Vorlagen|Vorlagen dienen der Zeitersparnis und Standardisierung. Ein Vorteil ist die Möglichkeit, Vorlagen nach den eigenen Bedürfnissen zu erstellen.
+|Arbeitsabläufe|Die Dokumentation von Prozessen erhöht die Effizienz und Nachvollziehbarkeit erheblich und trägt zur Transparenz und zum Know-how-Transport bei.
+|Beweissicherheit bedeutet die nachvollziehbare Dokumentation unter Einhaltung gesetzlicher Vorschriften, z.B. Versehen der Einträge mit einem Zeitstempel, elektronische Signatur, Versionierung.
+|Regelkonformität|Das Werkzeug muss die Einhaltung gesetzlicher Vorgaben ermöglichen, z.B. GLP, GCP.
+Tabelle Attribution: ZB MED PUBLISSO ELN-Filter, 2921-06 englisch.
 
-## Electronic Lab Notebooks (ELNs) in NFDI4Chem
+## Elektronische Laborjournale (ELNs) in NFDI4Chem
 
-[NFDI4Chem](https://www.nfdi4chem.de/) will support those ELNs that are relevant for documentation of chemical research activities. This support will include hosting one ELN instance for each of the relevant ELNs at KIT for teaching and training purposes. This service will be established in 2022 to allow all scientists to compare ELNs and their functionalities. Comparing and testing different ELNs is a prerequisite for making the right choice. Furthermore, NFDI4Chem organises various seminars with the goal of giving a first impression of different ELNs. These seminars are a good opportunity for ELN providers to demonstrate their ELN's usefulness and possible applications. For past and forthcoming seminars, please see the [Stammtisch event page](https://www.nfdi4chem.de/index.php/event/stammtisch-chemotion/).
+[NFDI4Chem](https://www.nfdi4chem.de/) wird die ELNs unterstützen, die für die Dokumentation von chemischen Forschungsaktivitäten relevant sind. Diese Unterstützung umfasst das Hosting einer ELN-Instanz für jedes der relevanten ELNs am KIT für Lehr- und Ausbildungszwecke. Dieser Dienst wird im Jahr 2022 eingerichtet, um allen Wissenschaftlern die Möglichkeit zu geben, ELNs und ihre Funktionalitäten zu vergleichen. Der Vergleich und das Testen verschiedener ELNs ist eine Voraussetzung, um die richtige Wahl zu treffen. Darüber hinaus organisiert NFDI4Chem verschiedene Seminare mit dem Ziel, einen ersten Eindruck von verschiedenen ELNs zu vermitteln. Diese Seminare sind eine gute Gelegenheit für ELN-Anbieter, den Nutzen und die Anwendungsmöglichkeiten ihrer ELNs zu demonstrieren. Vergangene und kommende Seminare finden Sie auf der [Stammtisch-Veranstaltungsseite](https://www.nfdi4chem.de/index.php/event/stammtisch-chemotion/).
 
 ## Chemotion ELN
 
-Chemotion is the ELN reference instance in NFDI4Chem. The Chemotion ELN is developed by several software developers at different NFDI4Chem sites. The ELN development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) in Karlsruhe as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
+Chemotion ist die ELN-Referenzinstanz in NFDI4Chem. Das Chemotion ELN wird von mehreren Softwareentwicklern an verschiedenen NFDI4Chem-Standorten entwickelt. Die ELN-Entwicklung begann am [Karlsruher Institut für Technologie (KIT)](https://www.kit.edu/) in Karlsruhe im Rahmen eines von der DFG geförderten Projekts. Die Erweiterung der Software wurde und wird weiterhin durch das [Ministerium für Wissenschaft, Forschung und Kunst Baden-Württemberg](https://mwk.baden-wuerttemberg.de/), das Karlsruher Institut für Technologie und die [Deutsche Forschungsgemeinschaft (DFG)](https://www.dfg.de/) unterstützt.
 
-The Chemotion ELN was designed for chemists and adapted to the special requirements of chemical laboratory work and documentation. It therefore serves as a digitalization instrument for work in chemistry, developed to overcome the current limitations of the existing systems. To reach this goal, the development, improvement, and extension of the ELN is a community effort. The ELN is also used in other disciplines beyond chemistry as it offers a broad generic functionality to meet the needs of scientists working in interdisciplinary environments. These generic functions are still being extended and adapted.
+Das Chemotion ELN wurde für Chemikerinnen und Chemiker konzipiert und an die speziellen Anforderungen der chemischen Laborarbeit und Dokumentation angepasst. Es dient somit als Digitalisierungsinstrument für die Arbeit in der Chemie, das entwickelt wurde, um die derzeitigen Grenzen der vorhandenen Systeme zu überwinden. Um dieses Ziel zu erreichen, ist die Entwicklung, Verbesserung und Erweiterung des ELN eine Gemeinschaftsarbeit. Das ELN wird auch in anderen Disziplinen als der Chemie eingesetzt, da es eine breite generische Funktionalität bietet, um den Bedürfnissen von Wissenschaftlern gerecht zu werden, die in interdisziplinären Umgebungen arbeiten. Diese generischen Funktionen werden ständig erweitert und angepasst.
 
-Chemotion ELN offers a specific function that facilitates the [publication of research data](/docs/data_publication): it supports the transfer of data from a user's ELN account to a research data repository. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+Chemotion ELN bietet eine spezielle Funktion, die die [Veröffentlichung von Forschungsdaten](/docs/data_publication) erleichtert: Es unterstützt den Transfer von Daten vom ELN-Konto eines Benutzers zu einem Repositorium für Forschungsdaten. Diese Funktion reduziert den Aufwand der Wissenschaftler für den Zugang zu Forschungsdaten, was von vielen Förderorganisationen gefordert wird und für die Veröffentlichung von wissenschaftlichen Texten hilfreich ist. Derzeit unterstützt das ELN die Übertragung von Daten an das [Chemotion Repositorium] (https://www.chemotion-repository.net/welcome). Das NFDI4Chem-Team arbeitet daran, Verbindungen zu weiteren Repositorien herzustellen, insbesondere zu den Repositorien, die von NFDI4Chem unterstützt und empfohlen werden.
 
-A short introduction to the Chemotion ELN as well as the connection to the Chemotion repository is demonstrated in this video:
+Eine kurze Einführung in das Chemotion ELN sowie die Anbindung an das Chemotion Repositorium wird in diesem Video gezeigt:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tZHaP6DW-Dw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### Documentation, information, and contact
+### Dokumentation, Informationen und Kontakt
 
-Chemotion ELN and its functions were described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/chemotionsaurus/docs/intro). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
+Chemotion ELN und seine Funktionen wurden in verschiedenen Publikationen beschrieben (siehe [unten](#Quellen-und-weitere-Informationen)). Für Anwender, Entwickler und Administratoren ist eine Dokumentation auf der [Website](https://www.chemotion.net/chemotionsaurus/docs/intro) des Projekts verfügbar. Chemotion ELN ist eine Open-Source-Entwicklung; der Quellcode ist auf [GitHub](https://github.com/ComPlat/chemotion_ELN) verfügbar.
 
-## Other Electronic Lab Notebooks
-There are a plethora of ELNs available and it is not always easy to figure out which is the right one for you. To help you choose an ELN, you can use the [ELN Finder](https://eln-finder.ulb.tu-darmstadt.de/home). Here, more than 40 filter criteria are available. Filter criteria are clearly divided into categories and the result list of the identified ELN tools are displayed in an overview alongside Brief descriptions of the individual tools.
+## Andere elektronische Labornotizbücher
+Es gibt eine Fülle von ELNs, und es ist nicht immer einfach herauszufinden, welches das richtige für Sie ist. Um Ihnen die Auswahl eines ELN zu erleichtern, können Sie den [ELN Finder](https://eln-finder.ulb.tu-darmstadt.de/home) verwenden. Hier stehen mehr als 40 Filterkriterien zur Verfügung. Die Filterkriterien sind übersichtlich in Kategorien eingeteilt und die Ergebnisliste der identifizierten ELN-Tools wird in einer Übersicht neben Kurzbeschreibungen der einzelnen Tools angezeigt.
 
-## Sources and further information
+## Quellen und weitere Informationen
 
-- [Chemotion ELN: an Open Source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
-- [Chemotion-ELN part 2: adaption of an embedded Ketcher editor to advanced research applications](https://doi.org/10.1186/s13321-018-0292-9)
-- [CHEMSCANNER: extraction and re-use(ability) of chemical information from common scientific documents containing ChemDraw files](https://doi.org/10.1186/s13321-019-0400-5)
-- [Chemotion ELN documentation](https://www.chemotion.net/chemotionsaurus/docs/intro)
-- [Chemotion ELN on Github](https://github.com/ComPlat/chemotion_ELN)
+- Chemotion ELN: ein Open Source elektronisches Laborjournal für Chemiker im akademischen Bereich](https://doi.org/10.1186/s13321-017-0240-0)
+- [Chemotion-ELN Teil 2: Anpassung eines eingebetteten Ketcher-Editors an fortgeschrittene Forschungsanwendungen](https://doi.org/10.1186/s13321-018-0292-9)
+- CHEMSCANNER: Extraktion und Wiederverwendung von chemischen Informationen aus wissenschaftlichen Dokumenten, die ChemDraw-Dateien enthalten](https://doi.org/10.1186/s13321-019-0400-5)
+- [Chemotion ELN Dokumentation](https://www.chemotion.net/chemotionsaurus/docs/intro)
+- [Chemotion ELN auf Github](https://github.com/ComPlat/chemotion_ELN)
